# tedooo-assignment

./: .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/instructions/: android.instructions.md  backend.instructions.md
android/: Dockerfile  settings.gradle.kts
android/app/: build.gradle.kts
backend/: Cargo.toml  Dockerfile
backend/migrations/: init.sql
backend/src/: lib.rs  main.rs
backend/src/auth/: jwt.rs
backend/src/cache/: mod.rs  redis.rs
backend/src/cache/redis_controller/: mod.rs
backend/src/controllers/: health_controller.rs  mod.rs  products_controller.rs  sellers_controller.rs
backend/src/db/: mod.rs  queries.rs
backend/src/db/db_controller/: mod.rs
backend/src/db/queries/: health_queries.rs  mod.rs  product_queries.rs  sellers_queries.rs
backend/src/logger/: mod.rs
backend/src/middleware/: jwt_auth.rs  rate_limiter.rs
backend/src/middlewares/: mod.rs  requests.rs
backend/src/models/: app_state.rs  dto.rs  mod.rs
backend/src/models/dto/: health_status.rs  mod.rs  product.rs  product_feed.rs  product_list_params.rs  seller.rs
backend/src/models/row/: mod.rs  product.rs  seller.rs
backend/src/repositories/: mod.rs  product_repository.rs  products_repository.rs  seller_repository.rs  sellers_repository.rs
backend/src/routes/: health.rs  mod.rs  product_details.rs  products.rs  sellers.rs
backend/src/state/: mod.rs
backend/src/utils/: cursor.rs  env.rs  logger.rs  mod.rs
backend/tests/: ddos_defense_tests.rs  health_check.rs  integration_tests.rs  products_test.rs  sellers_test.rs
backend/tests/common/: mod.rs
migrations/: init.sql
(+37 files in other folders)
