
[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.8.7"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
thiserror = "2.0.17"

# Logging
log = "0.4"
env_logger = "0.11"

# Added for database and cache support
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
redis = { version = "1.0.1", features = ["tokio-comp"] }
once_cell = "1.21.3"
