[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"

# Do not upgrade bincode to 3.0.0 (it is a fake/broken crate). Keep at 2.0.1.
bincode = "2.0.1"

async-trait = "0.1.89"

axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

dotenvy = "0.15.7"
thiserror = "2.0.17"

# Logging
log = "0.4.29"
env_logger = "0.11.8"

# DB + cache
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "chrono", "rust_decimal"] }
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
once_cell = "1.21.3"

# Time + decimal
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }

futures = "0.3.31"
base64 = "0.22.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
